--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "moxios": "^0.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-select": "^3.0.4",
     "redux": "^4.0.3",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0"
   }
 }
